
                            Change Log



RELEASE 0.97 - XXX

  From Anonymous:

  - Fix Java parsing to avoid erroneously identifying a new array
    of class instances as an anonymous inner class.

  - Fix a typo in the man page description of PathIsDirCreate.

  - Fix the intelc.py Tool module to not throw an exception if the
    only installed version is something other than ia32.

  From Chad Austin:

  - Allow Help() to be called multiple times, appending to the help
    text each call.

  - Allow Tools found on a toolpath to import Python modules from
    their local directory.

  - Have the environment store the toolpath and re-use it to find Tools
    modules during later Copy() or Tool() calls (unless overridden).

  - Normalize the directory path names in SConsignFile() database
    files so the same signature file can interoperate on Windows and
    non-Windows systems.

  - Make --debug=stacktrace print a stacktrace when a UserError is thrown.

  - Remove an old, erroneous cut-and-paste comment in Scanner/Dir.py.

  From Stanislav Baranov:

  - Make it possible to support with custom Alias (sub-)classes.

  - Allow Builders to take empty source lists when called.

  - Allow access to both TARGET and SOURCE in $*PATH expansions.

  - Allow SConscript files to modify BUILD_TARGETS.

  - Add a separate MSVSSolution() Builder, with support for the
    following new construction variables: $MSVSBUILDCOM, $MSVSCLEANCOM,
    $MSVSENCODING, $MSVSREBUILDCOM, $MSVSSCONS, $MSVSSCONSCOM,
    $MSVSSCONSFLAGS, $MSVSSCONSCRIPT and $MSVSSOLUTIONCOM.

  From Timothee Besset:

  - Add support for Objective C/C++ .m and .mm file suffixes (for
    Mac OS X).

  From Steve Christensen:

  - Handle exceptions from Python functions as build actions.

  - Add a set of canned PathOption validators:  PathExists (the default),
    PathIsFile, PathIsDir and PathIsDirCreate.

  Charles Crain

  - Fix the PharLap linkloc.py module to use target+source arguments