@@ -20,6 +20,11 @@ RELEASE 0.97 - XXX
   - Fix the intelc.py Tool module to not throw an exception if the
     only installed version is something other than ia32.
 
+  From Erling Andersen:
+
+  - Fix interpretation of Node.FS objects wrapped in Proxy instances,
+    allowing expansion of things like ${File(TARGET)} in command lines.
+
   From Chad Austin:
 
   - Allow Help() to be called multiple times, appending to the help
